--- a/doc/00_总述.md
+++ b/doc/00_总述.md
@@ -16,13 +16,15 @@
 
 #### WSL
 
-我们需要GNU/Linux方便的编程环境，但有时又不能抛弃Windows，这时我们不妨使用Microsoft发布的WSL(Windows Subsystem for Linux)，简单的说就是Windows下的一个子系统，可以让我们在Windows中使用GNU/Linux。不同于虚拟机，WSL1通过把GNU/Linux的接口调用转换成Windows的调用，这会使有些功能没法实现，而且I/O能力比较弱，但是它在某些方面有着不错的性能，而不是开着慢吞吞的虚拟机。WSL2则是利用Windows自带的虚拟机Hypervisor，通过专门的优化，虚拟出一个完整的GNU/Linux。它有着完整的功能，可以使用Docker，但是会有可能的电量消耗，性能问题。推荐笔记本使用WSL1作为终端使用，台式机使用WSL2体验完整的功能，甚至有原生体验，因为现在Microsoft着手在WSL2中引入GUI功能，可以在Windows里边直接打开GNU/Linux的GUI软件！
+我们需要GNU/Linux方便的编程环境，但有时又不能抛弃Windows，这时我们不妨使用Microsoft发布的WSL(Windows Subsystem for Linux)，简单的说就是Windows下的一个子系统，可以让我们在Windows中使用GNU/Linux。不同于虚拟机，WSL1通过把GNU/Linux的接口调用转换成Windows的调用，这会使有些功能没法实现，而且I/O能力比较弱，但是它在某些方面有着不错的性能，而不是开着慢吞吞的虚拟机。WSL2则是利用Windows自带的虚拟机Hyper-V，通过专门的优化，虚拟出一个完整的GNU/Linux。它有着完整的功能，可以使用Docker，但是会有可能的电量消耗，性能问题；通过我的使用发现开启Hyper-V可能会与第三方虚拟软件冲突，尽管发布了修补。推荐笔记本使用WSL1作为终端使用，台式机使用WSL2体验完整的功能，甚至有原生体验，因为现在Microsoft着手在WSL2中引入GUI功能，可以在Windows里边直接打开GNU/Linux的GUI软件！
 
 #### SSH/SCP
 
-很多时候我们需要通过网络远程控制其它主机，SSH(Secure Shell)就是一个很好的工具，它是GNU/Linux中的一个典型应用。通过它可以控制机房中的服务器，而这些机房通常是不让人进入的。
+很多时候我们需要通过网络远程控制其它主机，SSH(Secure Shell)就是一个很好的工具，它是GNU/Linux中的一个典型应用。通过它可以控制机房中的服务器，而这些机房通常是不让人进入的。SCP是个通过SSH通道(SSH Tunnel)的传输软件，可以在远程主机与本地主机之间相互传输文件与目录。
 
 #### Tmux
+
+我们通过SSH连接远程主机，万一发生网络问题断开连接，前台正在运行的程序也就被停止了，要处理这个问题可以使用终端复用(Terminal Multiplexing)工具Tmux。简单地说就是在主机上面开启一个Tmux守护进程(Daemon)来复用终端运行程序，只要主机没关闭它就永远存在，甚至主机重启后还能还原之前的状态，这样就不会被其他因素影响而意外终止我们运行的程序了。
 
 ### 2. Python 编程语言及相关库
 
